# automail-pro

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
automail-backend/: .env.example  README.md  alembic.ini  main.py  nixpacks.toml  pyproject.toml
automail-backend/alembic/: env.py
automail-backend/alembic/versions/: 0aa9a4979722_add_demo_user_seed_data.py  bee75e0b3012_add_sender_profile_fields_to_users.py  efa204059f21_initial_schema_with_users_campaigns_.py  f000447e1a11_encrypt_gmail_credential_email_address.py
automail-backend/app/: celery_app.py  config.py  database.py  limiter.py  main.py
automail-backend/app/api/: campaigns.py  deps.py  emails.py  oauth.py  tasks.py  tracking.py  users.py
automail-backend/app/models/: __init__.py  base.py  campaign.py  email.py  gmail_credential.py  lead.py  lead_research.py  tracking_event.py  user.py
automail-backend/app/schemas/: campaign.py  csv_upload.py  email.py  lead.py  scrape_result.py  user.py
automail-backend/app/services/: campaign_advance.py  campaign_service.py  csv_parser.py  daily_quota.py  dynamic_scraper.py  email_generator.py  (+10 more)
automail-backend/tests/: conftest.py  test_bulk_send.py  test_campaign_endpoints.py  test_csv_parser.py  test_daily_quota.py  test_database.py  test_email_generator.py  test_emails_endpoints.py  test_encryption.py  test_generation_task.py  test_gmail_oauth.py  test_gmail_sender.py  test_health.py  test_rate_limiting.py  test_scraper.py  test_scraping_task.py  test_sending_task.py  test_settings_validation.py  test_tasks.py  test_tracking.py  test_url_signer.py
(+93 files in other folders)
