[project]
name = "automail-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "celery[redis]>=5.6.3",
    "cryptography>=49.0.0",
    "fastapi>=0.137.0",
    "flower>=2.0.1",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.54.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "redis<=5.2.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
